--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Discord Bot Token
-DISCORD_TOKEN=your_discord_bot_token_here
+# 本番環境設定
+PROD_APPLICATION_ID=production_APPLICATION_ID_here
+PROD_BOT_TOKEN=production_bot_token_here
 
-# Bot Application ID
-CLIENT_ID=your_client_id_here
-
-# Guild ID (for development)
-GUILD_ID=your_guild_id_here
+# 開発環境設定
+DEV_APPLICATION_ID=development_APPLICATION_ID_here
+DEV_BOT_TOKEN=development_bot_token_here
+DEV_GUILD_ID=development_guild_id_here
