README.mdに開発環境と本番環境のBotの違いを追加し、.env.exampleのコメントを修正

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# 本番環境設定
+# 本番環境
 PROD_APPLICATION_ID=production_APPLICATION_ID_here
 PROD_BOT_TOKEN=production_bot_token_here
 
-# 開発環境設定
+# 開発環境
 DEV_APPLICATION_ID=development_APPLICATION_ID_here
 DEV_BOT_TOKEN=development_bot_token_here
 DEV_GUILD_ID=development_guild_id_here
